# streamlit_rfm_app

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml
data/processed/: 01.0-frosa-customer-transactions-data-bank-rfm-analysis.csv
data/raw/: data_bank.db
notebooks/: 01.0-frosa-customer-transactions-data-bank-rfm-analysis.ipynb
