# Poetry configs
[tool.poetry]
name = "streamlit_rfm_app"
version = "0.1.2"
description = ""
authors = ["Fátima Rosa <fatimamargarida_santos@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2"
streamlit = "^1.38"
boto3 = "^1.35"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Ruff configs
[tool.ruff.lint]
select = ['E', 'F', 'A', 'PLC', 'PLE', 'PLW', 'I']

[tool.ruff]
line-length = 120

# Vulture configs
[tool.vulture]
min_confidence = 80
paths=["."]
